@@ -1,10 +1,12 @@
 package logica.DTO;
+
 import com.fasterxml.jackson.annotation.JsonIgnore;
 import com.fasterxml.jackson.annotation.JsonInclude;
 import com.fasterxml.jackson.annotation.JsonInclude.Include;
 import jakarta.xml.bind.annotation.XmlAccessType;
 import jakarta.xml.bind.annotation.XmlAccessorType;
 import jakarta.xml.bind.annotation.XmlRootElement;
+import jakarta.xml.bind.annotation.XmlTransient;
 import java.time.format.DateTimeFormatter;
 import java.time.LocalDate;
 import java.util.ArrayList;
@@ -14,22 +16,23 @@ import logica.Propuesta.Comentario;
 import logica.Propuesta.Propuesta;
 import logica.Propuesta.Registro_Estado;
 
-
-
-@XmlRootElement(name = "DTOPropuesta") 
+@XmlRootElement(name = "DTOPropuesta")
 @XmlAccessorType(XmlAccessType.FIELD)
 @JsonInclude(Include.NON_NULL)
 public class DTOPropuesta {
-    
+
     private String Titulo;
     private String Descripcion;
     private String Imagen;
     private String Lugar;
     @JsonIgnore
+    @XmlTransient
     private LocalDate Fecha;
     @JsonIgnore
+    @XmlTransient
     private LocalDate FechaPublicacion;
     @JsonIgnore
+    @XmlTransient
     private LocalDate fechaExpiracion;
     
     private String FechaString;
@@ -38,38 +41,38 @@ public class DTOPropuesta {
     private int Precio;
     private int MontoTotal;
     private byte[] img;
-    
+
     @JsonIgnore
     private List<TipoRetorno> Retorno = new ArrayList<>();
     @JsonIgnore
     private DTOCategoria cat;
     private String categoria;
     @JsonIgnore //ignora en json
-    private DTOProponente usr; 
-    
+    private DTOProponente usr;
+
     private Estado EstadoAct;
-    
+
     @JsonInclude(Include.NON_EMPTY)
     private List<DTORegistro_Estado> historialEstados = new ArrayList<>();
-    
+
     @JsonInclude(Include.NON_EMPTY)//ignora en caso vacio en json
-    private List<DTOColaboracion> aporte =new ArrayList<>();
-   
+    private List<DTOColaboracion> aporte = new ArrayList<>();
+
     @JsonInclude(Include.NON_EMPTY)
-    private List<Comentario> comentarios = new ArrayList<>();       
-            
-    public DTOPropuesta(){}
-    
-    public DTOPropuesta(String titulo, LocalDate fechaExp)  //Es para el caso donde solo debo transportar el titulo y Fecha expriracion para algunas funciones que piden DTO
+    private List<Comentario> comentarios = new ArrayList<>();
+
+    public DTOPropuesta() {
+    }
+
+    public DTOPropuesta(String titulo, LocalDate fechaExp) //Es para el caso donde solo debo transportar el titulo y Fecha expriracion para algunas funciones que piden DTO
     {
-        this.Titulo=titulo;
-        this.fechaExpiracion=fechaExp;
+        this.Titulo = titulo;
+        this.fechaExpiracion = fechaExp;
         this.fechaExpiracionString = (fechaExp != null) ? fechaExp.toString() : "";
 
     }
-    
-    public DTOPropuesta(String Titulo, String Descripcion, String Imagen, String Lugar, LocalDate Fecha, int Precio, int MontoTotal, LocalDate FechaPublicacion, List<TipoRetorno> Retorno, DTOCategoria cat, DTOProponente usr, Estado EstadoAct, List<Registro_Estado> _historialEstados, List<Colaboracion> _colaboradores, List<Comentario> _comentarios) 
-    {
+
+    public DTOPropuesta(String Titulo, String Descripcion, String Imagen, String Lugar, LocalDate Fecha, int Precio, int MontoTotal, LocalDate FechaPublicacion, List<TipoRetorno> Retorno, DTOCategoria cat, DTOProponente usr, Estado EstadoAct, List<Registro_Estado> _historialEstados, List<Colaboracion> _colaboradores, List<Comentario> _comentarios) {
         this.Titulo = Titulo;
         this.Descripcion = Descripcion;
         this.Imagen = Imagen;
@@ -79,11 +82,11 @@ public class DTOPropuesta {
         this.MontoTotal = MontoTotal;
         this.FechaPublicacion = FechaPublicacion;
         this.FechaString = Fecha.toString();
-        this.FechaPublicacionString=FechaPublicacion.toString();
+        this.FechaPublicacionString = FechaPublicacion.toString();
         this.cat = cat;
         this.usr = usr;
         this.EstadoAct = EstadoAct;
-        this.comentarios = _comentarios; 
+        this.comentarios = _comentarios;
 
         for (int i = 0; i < _historialEstados.size(); i++) //Pasa de Lista Class normal a lista de DTO
         {
@@ -94,7 +97,7 @@ public class DTOPropuesta {
         }
 
     }
-    
+
     public void setCategoria(String categoria) {
         this.categoria = categoria;
     }
@@ -102,33 +105,30 @@ public class DTOPropuesta {
     public void setAporte(List<DTOColaboracion> aporte) {
         this.aporte = aporte;
     }
-    
-    public DTOPropuesta(String Titulo,String Descripcion,String Imagen ,String Lugar, LocalDate Fecha, int Precio, int MontoTotal,LocalDate FechaPublicacion,List<TipoRetorno> Retorno,DTOCategoria cat,DTOProponente usr,Estado EstadoAct, List<Registro_Estado> _historialEstados, List<Colaboracion> _colaboradores)
-    {
-        this.Titulo=Titulo;
-        this.Descripcion=Descripcion;
-        this.Imagen=Imagen;
-        this.Lugar=Lugar;
-        this.Fecha=Fecha;
+
+    public DTOPropuesta(String Titulo, String Descripcion, String Imagen, String Lugar, LocalDate Fecha, int Precio, int MontoTotal, LocalDate FechaPublicacion, List<TipoRetorno> Retorno, DTOCategoria cat, DTOProponente usr, Estado EstadoAct, List<Registro_Estado> _historialEstados, List<Colaboracion> _colaboradores) {
+        this.Titulo = Titulo;
+        this.Descripcion = Descripcion;
+        this.Imagen = Imagen;
+        this.Lugar = Lugar;
+        this.Fecha = Fecha;
         this.FechaString = (Fecha != null) ? Fecha.toString() : "";
-        this.Precio=Precio;
-        this.MontoTotal=MontoTotal;
-        this.FechaPublicacion=FechaPublicacion;
-        this.FechaPublicacionString = (FechaPublicacion != null) ? FechaPublicacion.toString() : "";  
-        this.cat=cat;
+        this.Precio = Precio;
+        this.MontoTotal = MontoTotal;
+        this.FechaPublicacion = FechaPublicacion;
+        this.FechaPublicacionString = (FechaPublicacion != null) ? FechaPublicacion.toString() : "";
+        this.cat = cat;
         this.usr = usr;
-        this.EstadoAct=EstadoAct;
-        
-        for (int i = 0; i < _historialEstados.size(); i++)   //Pasa de Lista Class normal a lista de DTO
+        this.EstadoAct = EstadoAct;
+
+        for (int i = 0; i < _historialEstados.size(); i++) //Pasa de Lista Class normal a lista de DTO
         {
             historialEstados.add(new DTORegistro_Estado(_historialEstados.get(i).getFechaReg(), _historialEstados.get(i).getEstado()));
         }
-       for (int b = 0; b < _colaboradores.size(); b++) 
-        {
+        for (int b = 0; b < _colaboradores.size(); b++) {
             aporte.add(new DTOColaboracion(_colaboradores.get(b).getTipoRetorno(), _colaboradores.get(b).getMonto(), _colaboradores.get(b).getColaborador().getNickname(), _colaboradores.get(b).getPropuesta().getTitulo(), _colaboradores.get(b).getCreado()));
         }
 
-        
     }
 
     public void setImg(byte[] img) {
@@ -139,15 +139,13 @@ public class DTOPropuesta {
         return img;
     }
 
-    
-    public DTOPropuesta(Propuesta p, DTOProponente proponente) 
-    {
+    public DTOPropuesta(Propuesta p, DTOProponente proponente) {
         this.Titulo = p.getTitulo();
         this.Descripcion = p.getDescripcion();
         this.Imagen = p.getImagen();
         this.Lugar = p.getLugar();
         this.Fecha = p.getFecha();
-        this.FechaString = (p.getFecha() != null) ? p.getFecha().toString() : "";       
+        this.FechaString = (p.getFecha() != null) ? p.getFecha().toString() : "";
         this.Precio = p.getPrecio();
         this.MontoTotal = p.getMontoTotal();
         this.FechaPublicacion = p.getFechaPublicacion();
@@ -159,56 +157,69 @@ public class DTOPropuesta {
         this.comentarios = p.getComentarios();
     }
 
-    public Estado getEstado(){
+    public Estado getEstado() {
         return EstadoAct;
     }
-    public  String getTitulo() {
+
+    public String getTitulo() {
         return Titulo;
     }
-    public  String getDescripcion() {
+
+    public String getDescripcion() {
         return Descripcion;
     }
-    public  String getImagen() {
+
+    public String getImagen() {
         return Imagen;
     }
-    public  String getLugar() {
+
+    public String getLugar() {
         return Lugar;
     }
-    public  String getCategorioToString() {
+
+    public String getCategorioToString() {
         return categoria;
     }
-    public  LocalDate getFecha() {
+
+    public LocalDate getFecha() {
         return Fecha;
     }
+
     public int getPrecio() {
         return Precio;
     }
+
     public int getMontoTotal() {
         return MontoTotal;
     }
+
     public LocalDate getFechaPublicacion() {
         return FechaPublicacion;
     }
+
     public List<TipoRetorno> getRetorno() {
         return Retorno;
     }
-    public DTOCategoria getCategoria(){
+
+    public DTOCategoria getCategoria() {
         return cat;
     }
-    public DTOProponente getProponente()
-    {
-        if(usr == null) //Control de error, no es reelevante al uso.
+
+    public DTOProponente getProponente() {
+        if (usr == null) //Control de error, no es reelevante al uso.
         {   //DTFecha a = new DTFecha(30,12,9999);
-            LocalDate a =  LocalDate.of(9999,30,12);
-            DTOProponente b = new DTOProponente("Error","Error","Error","Error","Error","Error","Error",a,"NO");
-           return b;
+            LocalDate a = LocalDate.of(9999, 30, 12);
+            DTOProponente b = new DTOProponente("Error", "Error", "Error", "Error", "Error", "Error", "Error", a, "NO");
+            return b;
         }
-        
+
         return usr;
     }
+
     public List<DTORegistro_Estado> getHistorialEstados() {
         return historialEstados;
     }
+
     public void setTitulo(String titulo) {
         Titulo = titulo;
     }
@@ -220,7 +231,7 @@ public class DTOPropuesta {
     public void setImagen(String Imagen) {
         this.Imagen = Imagen;
     }
-   
+
     public void setLugar(String lugar) {
         Lugar = lugar;
     }
@@ -244,38 +255,37 @@ public class DTOPropuesta {
     public void setFechaPublicacion(LocalDate fechaPublicacion) {
         FechaPublicacion = fechaPublicacion;
     }
-    public void setRetornos(List<TipoRetorno> retorno) { 
-        this.Retorno = retorno;     
+
+    public void setRetornos(List<TipoRetorno> retorno) {
+        this.Retorno = retorno;
     }
-    public void setCategoria(DTOCategoria Cat){
+
+    public void setCategoria(DTOCategoria Cat) {
         cat = Cat;
     }
-    public void setProponente(DTOProponente Propo){
+
+    public void setProponente(DTOProponente Propo) {
         usr = Propo;
     }
 
     public void setEstadoAct(Estado EstadoAct) {
         this.EstadoAct = EstadoAct;
     }
-    
-    public void setComentarios(List<Comentario> input)
-    {
+
+    public void setComentarios(List<Comentario> input) {
         this.comentarios = input;
     }
-    
-    public void addNewComentario(String usuario, String comentario)
-    {
-        if(!usuario.isEmpty() && !comentario.isEmpty())
-        {
-            
-            Comentario temp = new Comentario (usuario,comentario);
+
+    public void addNewComentario(String usuario, String comentario) {
+        if (!usuario.isEmpty() && !comentario.isEmpty()) {
+
+            Comentario temp = new Comentario(usuario, comentario);
             this.comentarios.add(temp);
         }
-       
+
     }
-    
-    public void extraerDatosPropuesta(Propuesta in)
-    {
+
+    public void extraerDatosPropuesta(Propuesta in) {
         Titulo = in.getTitulo();
         Descripcion = in.getDescripcion();
         Imagen = in.getImagen();
@@ -287,19 +297,18 @@ public class DTOPropuesta {
         FechaPublicacion = in.getFechaPublicacion();
         fechaExpiracion = in.getFechaExpiracion();
         FechaPublicacionString = (this.FechaPublicacion != null) ? this.FechaPublicacion.toString() : "";
-        fechaExpiracionString = (this.fechaExpiracion != null) ? this.fechaExpiracion.toString() : ""; 
+        fechaExpiracionString = (this.fechaExpiracion != null) ? this.fechaExpiracion.toString() : "";
         EstadoAct = in.getHistorialEstados().get(0).getEstado();
         Retorno = in.getRetorno();
         comentarios = in.getComentarios();
         categoria = in.getCategoria().getNombreCategoria();
-        
+
         if (in.getCategoria() != null) {
             this.cat = in.getCategoria().Cat_a_DTO();
-        } 
-        else {
+        } else {
             this.cat = null; // o crear un DTO de categoría vacío si quieres
         }
-        usr = new DTOProponente(in.getProponente().getDireccion(),in.getProponente().getBiografia(),
+        usr = new DTOProponente(in.getProponente().getDireccion(), in.getProponente().getBiografia(),
                 in.getProponente().getWebSite(),
                 in.getProponente().getNickname(),
                 in.getProponente().getNombre(),
@@ -307,39 +316,38 @@ public class DTOPropuesta {
                 in.getProponente().getEmail(),
                 in.getProponente().getFecha(),
                 in.getProponente().getRutaImg());
-        
-        for (int i = 0; i < in.getHistorialEstados().size(); i++) 
-        {
+
+        for (int i = 0; i < in.getHistorialEstados().size(); i++) {
             historialEstados.add(new DTORegistro_Estado(in.getHistorialEstados().get(i).getFechaReg(), in.getHistorialEstados().get(i).getEstado()));
         }
-        for (int b = 0; b < in.getAporte().size(); b++) 
-        {
+        for (int b = 0; b < in.getAporte().size(); b++) {
             aporte.add(new DTOColaboracion(in.getAporte().get(b).getTipoRetorno(), in.getAporte().get(b).getMonto(), in.getAporte().get(b).getColaborador().getNickname(), in.getAporte().get(b).getPropuesta().getTitulo(), in.getAporte().get(b).getCreado(), in.getAporte().get(b).getDatosPago()));
         }
     }
-        
-    public void setHistorialEstados(DTORegistro_Estado historial) 
-    {
-        historialEstados.add(historial); 
+
+    public void setHistorialEstados(DTORegistro_Estado historial) {
+        historialEstados.add(historial);
     }
-    public void setHistorialEstadosB(List<Registro_Estado> input) 
-    {
-        for (Registro_Estado ct : input)
-        {
-           historialEstados.add(new DTORegistro_Estado(ct.getFechaReg(),ct.getEstado()));  
+
+    public void setHistorialEstadosB(List<Registro_Estado> input) {
+        for (Registro_Estado ct : input) {
+            historialEstados.add(new DTORegistro_Estado(ct.getFechaReg(), ct.getEstado()));
         }
-        
+
     }
-   public void setColaboracion(DTOColaboracion c){
+
+    public void setColaboracion(DTOColaboracion c) {
         aporte.add(c);
     }
-    public void setColaboracionB(List<DTOColaboracion> c)
-    {
+
+    public void setColaboracionB(List<DTOColaboracion> c) {
         aporte = c;
     }
+
     public List<DTOColaboracion> getAporte() {
         return aporte;
     }
+
     public DTOCategoria getCat() {
         return cat;
     }
@@ -347,17 +355,16 @@ public class DTOPropuesta {
     public DTOProponente getUsr() {
         return usr;
     }
-    
-    public DTORegistro_Estado obtenerPrimero(){
-        if(!historialEstados.isEmpty()){
-             //return  historialEstados.getFirst();
-            return historialEstados.get(0); 
+
+    public DTORegistro_Estado obtenerPrimero() {
+        if (!historialEstados.isEmpty()) {
+            //return  historialEstados.getFirst();
+            return historialEstados.get(0);
         }
         return null;
     }
-    
-    public DTORegistro_Estado getUltimoEstado() 
-    {
+
+    public DTORegistro_Estado getUltimoEstado() {
         DTORegistro_Estado almacen = new DTORegistro_Estado();
         if (!historialEstados.isEmpty()) {
             almacen.DTOextraerDatos(historialEstados.get(0)); //El ultimo nodo se almacena en el DTO
@@ -366,38 +373,32 @@ public class DTOPropuesta {
 
         return almacen;
     }
-    public String nickProponenteToString ()
-    {
-        if(usr == null)
-        {
+
+    public String nickProponenteToString() {
+        if (usr == null) {
             return "NO_USER_(NO_EXISTE)";
         }
-        
+
         return usr.getNickname();
     }
-    
-    public LocalDate getFechaExpiracion()
-    {
+
+    public LocalDate getFechaExpiracion() {
         return fechaExpiracion;
     }
-    
-    public List<Comentario> getComentarios()
-    {
+
+    public List<Comentario> getComentarios() {
         return comentarios;
     }
-   
-    public int chequearRecaudado(List<DTOColaboracion> aporteInput)
-    {
+
+    public int chequearRecaudado(List<DTOColaboracion> aporteInput) {
         int recaudo = 0;
-        
-        if(aporteInput != null && !aporteInput.isEmpty())
-        {
-            for(DTOColaboracion ct : aporteInput)
-            {
+
+        if (aporteInput != null && !aporteInput.isEmpty()) {
+            for (DTOColaboracion ct : aporteInput) {
                 recaudo += ct.getMonto();
             }
         }
-        
+
         return recaudo;
     }
 
@@ -424,17 +425,14 @@ public class DTOPropuesta {
     public String getFechaExpiracionString() {
         return fechaExpiracionString;
     }
-    
-    public boolean usuarioHaComentadoSN(String userNick)
-    {
-        for(Comentario ct : comentarios)
-        {
-            if(ct.getNickUsuario().equals(userNick))
-            {
+
+    public boolean usuarioHaComentadoSN(String userNick) {
+        for (Comentario ct : comentarios) {
+            if (ct.getNickUsuario().equals(userNick)) {
                 return true;
             }
         }
-        
+
         return false;
     }
 }
